--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="navbar">
         <div class="logo">
-            <img class="logo-img" src="assets/logo.svg" alt="">
+            <img id="logo-img" class="logo-img" src="assets/logo.svg" alt="">
         </div>
 
         <div class="login-menu">
@@ -24,13 +24,10 @@
 
             <div class="account">
                 <img id="loginButton" src="assets/account.jpg" alt="" class="login-button">
-                <div id="userLabel" class="user">Fede</div>
+                <div id="username" class="user-label">Account</div>
             </div>
 
             <img src="assets/basket.jpg" alt="">
-
-            <div id="username" class="username auth none"></div>
-            <a id="logoutButton" class="identityButton auth" style="display: none;" href="/">Logout</a>
         </div>
     </div>
     <div class="main">
