Added transaction approval

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="login-menu">
-            <img src="assets/search.jpg" alt="">
+            <img class="search" src="assets/search.jpg" alt="">
             <img src="assets/locations.jpg" alt="">
 
             <div class="account">
@@ -32,6 +32,7 @@
     </div>
     <div class="main">
         <img id="home" class="home-image" src="assets/home.jpg" alt="">
+        <img id="bikes" class="home-image hidden" src="assets/bikes.jpg" alt="">
         <div id="widget" class="skWidget"></div>
     </div>
 </body>
